--- a/src/Styles/ProductContainer.css
+++ b/src/Styles/ProductContainer.css
@@ -1,21 +1,43 @@
 .product-card-container{
-    display:flex;
-    justify-content: space-around;
+    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adjust column width */
+    gap: 20px; /* Adjust spacing between cards */
+    justify-items: center; /* Center items horizontally */
+    width: 90%
   }
 
-@media (max-width: 600px) {
-
-    .product-card-container{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-
+.product-container{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-@media (max-width: 1050px){
-    .product-card-container{
-        flex-wrap: wrap;
-        justify-content: center;
+.tag-container{
+    width: 90%
+}
+
+@media (max-width: 750px) {
+    .product-card-container {
+      grid-template-columns: repeat(auto-fill, minmax(100%, 1fr)); /* 1 item per line on small screens */
     }
-}
+  }
+  
+  @media (min-width: 751px) and (max-width: 1100px) {
+    .product-card-container {
+      grid-template-columns: repeat(auto-fill, minmax(45%, 1fr)); /* Adjust column width for medium screens */
+    }
+  }
+  
+  @media (min-width: 1101px) and (max-width: 1475px) {
+    .product-card-container {
+      grid-template-columns: repeat(auto-fill, minmax(32%, 1fr)); /* Adjust column width for medium screens */
+    }
+  }
+
+  @media (min-width: 1450px) and (max-width: 1825px){
+    .product-card-container {
+        grid-template-columns: repeat(auto-fill, minmax(24%, 1fr)); /* Adjust column width */
+    }
+  }
