--- a/src/index.css
+++ b/src/index.css
@@ -30,55 +30,22 @@
     cursor: pointer;
   }
   
-  .dropdown-menu {
-    position: fixed; 
+  .dropdown-nav-menu {
+    position: fixed;
     left: 0;
-    top: 56px; 
+    top: 56px;
     width: 100vw;
     color: black;
     padding: 1rem;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border: 1px solid black;
     z-index: 1000;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white; 
   }
-
-.product-image {
-    width: 100px;
-    height: 150px;
-    margin: 0;
-    padding: 0;
-}
-
-.product-card{
-    width: 400px;
-    height: 175px;
-    border: 1px solid gray
-}
-
-.card-img{
-    margin: 0;
-    padding: 10px;
-    width: 150px;
-    height: 150px;
-}
-
-.product-image-container{
-    border-right: 1px solid #000;
-}
-
-.card-info{
-    background-color: #071108;
-    color: white;
-    padding: 10px;
-    white-space: normal;
-    overflow-wrap: anywhere;
-    border-top-right-radius: 0.25em;
-    border-bottom-right-radius: 0.25em;
-}
 
 @media (max-width: 600px) {
   .left, .right {
