--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 
 .navbar-container {
     position: relative;
+    margin-bottom: 2em;
   }
   
   .navbar {
@@ -14,6 +15,11 @@
     align-items: center;
     padding: 1rem;
     background-color: #9bcdff;
+  }
+
+  a{
+    text-decoration: none;
+    color: black
   }
   
   .left, .right {
