Finishing Get By Tag

--- a/src/Styles/BasketProductCard.css
+++ b/src/Styles/BasketProductCard.css
@@ -10,7 +10,7 @@
     border: 1px solid black;
     height: 20vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .basket-card-img{
@@ -18,4 +18,28 @@
     padding: 10px;
     width: 150px;
     height: 150px;
+}
+
+.basket-info{
+    min-width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn-add{
+    margin-left: 10px
+}
+
+.btn-sub{
+    margin-right: 10px
+}
+
+.quantity{
+    display: flex;
+    align-items: center;
+}
+
+.quantity-info{
+    margin-bottom: 0;
 }
