--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,10 @@
   color: white;
 }
 
+a:hover{
+  color: white;
+}
+
 .logout-button:focus {
   outline: none;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2); 
